# Academix-AI

./: README.md
AI-backend/: main.py  pyproject.toml  test.py
AI-backend/config/: db.py
AI-backend/documents/: pdfLoader.py  textChunker.py  textCleaner.py
AI-backend/llms/: gemini.py
AI-backend/models/: quizModel.py
AI-backend/prompts/: quizPrompt.py
AI-backend/rag/chunkers/: recursiveChunk.py
AI-backend/rag/embeddings/: giminiEmbeddings.py
AI-backend/rag/loaders/: pdfloader.py
AI-backend/rag/pipeline/: IngestionPipeline.py
AI-backend/rag/storage/: QdrantVS.py
AI-backend/rag/utils/: cleantxt.py
AI-backend/services/: quizGenerationService.py  quizService.py
AI-backend/utils/: jsonParser.py
server/src/: app.js
server/src/controllers/: authController.js  instituteController.js  studentController.js  teacherController.js
server/src/middleware/: auth.js
server/src/models/: applicationModel.js  assignmentModel.js  coursesModel.js  studentModel.js  teacherModel.js
server/src/routes/: institutionRoutes.js  studentRoutes.js  teacherRoutes.js
server/src/utils/: utils.js
