[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi==0.139.0",
    "google-genai>=2.11.0",
    "langchain-core>=1.4.9",
    "langchain-text-splitters>=1.1.2",
    "psycopg[binary]==3.3.4",
    "pymupdf>=1.28.0",
    "python-dotenv==1.2.2",
    "qdrant-client>=1.18.0",
    "requests==2.34.2",
    "sqlalchemy==2.0.51",
    "uvicorn==0.51.0",
]
